misc bugfixes i think

--- a/static/index.html
+++ b/static/index.html
@@ -21,8 +21,11 @@
       <input type="text" id="quizID">
       <input type="submit" value="Submit">
     </form>
-    
+  <a href="editor">editor</a>   
   </div>
+  
+
 </body>
+
 
 </html>
