--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>QUIZTIME</title>
   <link rel="stylesheet" href="/css/custom.css">
+  <link rel="stylesheet" href="/css/bootstrap.css">
   <script>
     function onFormSubmit() {
       console.log("hi there")
